--- a/Pages/Herramientas.html
+++ b/Pages/Herramientas.html
@@ -1,6 +1,6 @@
 <html><link type="text/css" rel="stylesheet" id="dark-mode-custom-link"><link type="text/css" rel="stylesheet" id="dark-mode-general-link"><style type="text/css" id="dark-mode-custom-style" lang="en"></style><style type="text/css" id="dark-mode-native-style" lang="en"></style><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <title>.\README.md</title>
+        <title>Herramientas</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
       </head>
       <body>
@@ -120,6 +120,7 @@ programadas a mano.</li>
   font: 400 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #dcdcdc;
   background-color: #292929;
+  text-align: justify;
   -webkit-text-size-adjust: 100%;
   -webkit-font-feature-settings: "kern" 1;
   -moz-font-feature-settings: "kern" 1;
