--- a/Pages/Caso de estudio Dataset Iris.html
+++ b/Pages/Caso de estudio Dataset Iris.html
@@ -44,7 +44,7 @@ columnas indicados en <a href="https://archive.ics.uci.edu/ml/machine-learning-d
 <p>Finalmente, presionamos el botón de "Play" para correr el proceso.</p>
 <h3 id="resultados">Resultados</h3>
 <p>Para acceder a los resultados, iremos a la pestaña "Results" indicada
- arriba. Allí, encontraremos varias pestañas más del lazo izquierdo.</p>
+ arriba. Allí, encontraremos varias pestañas más del lado izquierdo.</p>
 <h4 id="data">Data</h4>
 <p>Esta pestaña sin modificar, nos mostrará el conjunto de datos en un 
 formato de tabla. Agregando otros operadores, es posible agregar 
