Fixed background color

--- a/Pages/Herramientas.html
+++ b/Pages/Herramientas.html
@@ -119,7 +119,7 @@ programadas a mano.</li>
         <style type="text/css" class="dark-mode-native-dark-original">body {
   font: 400 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #dcdcdc;
-  background-color: #292929;
+  background-color: #0d1117;
   text-align: justify;
   -webkit-text-size-adjust: 100%;
   -webkit-font-feature-settings: "kern" 1;
