--- a/Pages/Introduccion a machine learning.html
+++ b/Pages/Introduccion a machine learning.html
@@ -29,7 +29,7 @@ Funciona de la siguiente manera:</p>
 font: 400 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
 color: #dcdcdc;
 text-align: justify;
-background-color: #292929;
+background-color: #0d1117;
 -webkit-text-size-adjust: 100%;
 -webkit-font-feature-settings: "kern" 1;
 -moz-font-feature-settings: "kern" 1;
