--- a/Pages/Preparacion de datos.html
+++ b/Pages/Preparacion de datos.html
@@ -127,7 +127,7 @@ previo a estudiarlos y mejorar nuestros análisis.</p>
         <style type="text/css">body {
   font: 400 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #dcdcdc;
-  background-color: #292929;
+  background-color: #0d1117;
   text-align: justify;
   -webkit-text-size-adjust: 100%;
   -webkit-font-feature-settings: "kern" 1;
