--- a/Pages/Caso de estudio Dataset Iris.html
+++ b/Pages/Caso de estudio Dataset Iris.html
@@ -97,7 +97,7 @@ futuro predecir un tipo de flor dados los datos sin clasificar.</p>
         <style type="text/css">body {
   font: 400 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #dcdcdc;
-  background-color: #292929;
+  background-color: #0d1117;
   text-align: justify;
   -webkit-text-size-adjust: 100%;
   -webkit-font-feature-settings: "kern" 1;
