--- a/Pages/CasoDeEstudioTitanic.html
+++ b/Pages/CasoDeEstudioTitanic.html
@@ -2,6 +2,15 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
           <title>Analisis Titanic</title>
         </head>
+        <header>
+          <a class="logo" href="../index.html"><img src="../logo.svg" alt="logo"></a>
+          <nav>
+              <ul class="nav__links">
+                  <li><a href="../Machine Learning.html">Machine Learning</a></li>
+                  <li><a href="#">Proximamente..</a></li>
+              </ul>
+          </nav>
+      </header>
         <body>
           <div id="content">
       <h1 id="caso-de-estudio-dataset-titanic-con-sklearn">Caso de estudio: Dataset Titanic con sklearn</h1>
@@ -196,32 +205,31 @@ características en sus predicciones y generar mejores resultados.</p>
 <li><a href="https://colab.research.google.com/drive/1Kk1ADd7CeQafmILFjUEiq_HeCcLvF2wO?usp=sharing">Código completo ejecutado</a></li>
 </ul>
           </div>
-          <style type="text/css">body {
-  font: 400 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+          <style type="text/css">
+@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
+
+body {
   color: #dcdcdc;
   background-color: #0d1117;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  justify-content: center;
+  align-items: center;
+  font-family: "Poppins", sans-serif;
+}
+
+
+
+body > #content {
   text-align: justify;
+  font-kerning: normal;
   -webkit-text-size-adjust: 100%;
   -webkit-font-feature-settings: "kern" 1;
   -moz-font-feature-settings: "kern" 1;
   -o-font-feature-settings: "kern" 1;
   font-feature-settings: "kern" 1;
-  font-kerning: normal;
-  padding: 30px;
-}
-
-@media only screen and (max-width: 600px) {
-  body {
-    padding: 5px;
-  }
-
-  body > #content {
-    padding: 0px 20px 20px 20px !important;
-  }
-}
-
-body > #content {
-  margin: 0px;
+  margin-top: 2%;
   max-width: 900px;
   border: 1px solid #555555;
   padding: 10px 40px;
@@ -229,6 +237,8 @@ body > #content {
   border-radius: 2px;
   margin-left: auto;
   margin-right: auto;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Poppins";
+  color: #dcdcdc;
 }
 
 hr {
@@ -244,15 +254,14 @@ hr {
 /**
  * Links
  */
-a {
+.content a {
   color: #0366d6;
   text-decoration: none; }
-  a:visited {
+  .content a:visited {
     color: #0366d6; }
-  a:hover {
+  .content a:hover {
     color: #0366d6;
     text-decoration: underline; }
-
 pre {
   background-color: #161b22;
   border-radius: 3px;
@@ -360,30 +369,89 @@ p {
   font-size: 16px;
   color: #dcdcdc; }
 
-ul {
+#content ul {
   margin-top: 0; }
 
-li {
+
+#content li {
   color: #dcdcdc;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5; }
 
-li + li {
+#content li + #content li {
   margin-top: 0.25em; }
 
-* {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  color: #dcdcdc; }
 
-a:visited {
+
+  #content a:visited {
   color: #0366d6; }
 
 h1, h2, h3 {
   border-bottom: 1px solid #555555;
   color: #dcdcdc;
-  /* Darker */ }</style>
-          <style type="text/css">/*
+  /* Darker */ }
+
+  header {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 10px 10%;
+  background-color: #161b22;
+  width: 100%; 
+  box-sizing: border-box; 
+  font-family: "Poppins", sans-serif;
+}
+
+.logo {
+  margin-right: auto;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.logo img {
+  padding: 0;
+  box-sizing: border-box;
+}
+
+nav {
+  box-sizing: border-box;
+  padding: 0;
+}
+
+.nav__links {
+  box-sizing: border-box;
+  list-style: none;
+  display: flex;
+  padding: 0;
+}
+
+.nav__links a,
+.cta,
+.overlay__content a {
+  font-weight: 500;
+  color: #edf0f1;
+  text-decoration: none;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.nav__links li {
+  padding: 0px 20px;
+  box-sizing: border-box;
+}
+
+.nav__links li a {
+  box-sizing: border-box;
+  padding: 0;
+  transition: all 0.3s ease 0s;
+}
+
+.nav__links li a:hover {
+  color: #0088a9;
+}
+</style>
+<style type="text/css">/*
 
 github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 
