--- a/Pages/Introduccion a machine learning.html
+++ b/Pages/Introduccion a machine learning.html
@@ -5,6 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
       </head>
       <body>
+        <header>
+          <a class="logo" href="../index.html"><img src="../logo.svg" alt="logo"></a>
+          <nav>
+              <ul class="nav__links">
+                  <li><a href="../Machine Learning.html">Machine Learning</a></li>
+                  <li><a href="#">Proximamente..</a></li>
+              </ul>
+          </nav>
+      </header> 
         <div id='content'>
     <h1 id="machine-learning">Introducción al aprendizaje automático</h1>
 <p><img src="Introduccion a machine learning_files/ml1.jpg"></p>
@@ -25,60 +34,52 @@ Funciona de la siguiente manera:</p>
 <p>Donde x es nuestro conjunto de entradas, Y es la salida dados esas entradas y F es la función que el o los algoritmos de Machine learning aplicados buscan encontrar, de forma de poder utilizar esa función F para poder predecir la salida de nuevos datos de entrada en un futuro e ir ajustándola a futuro para acercarla cada vez más a una transformación perfecta.</p>
 
 </div>
-<style type="text/css" class="dark-mode-native-dark-original">body {
-font: 400 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-color: #dcdcdc;
-text-align: justify;
-background-color: #292929;
--webkit-text-size-adjust: 100%;
--webkit-font-feature-settings: "kern" 1;
--moz-font-feature-settings: "kern" 1;
--o-font-feature-settings: "kern" 1;
-font-feature-settings: "kern" 1;
-font-kerning: normal;
-padding: 30px;
-}
+<style type="text/css" class="dark-mode-native-dark-cloned" disabled="">
+@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
 
-@media only screen and (max-width: 600px) {
+
 body {
-padding: 5px;
+  color: #dcdcdc;
+  background-color: #0d1117;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  justify-content: center;
+  align-items: center;
+  font-family: "Poppins", sans-serif;
 }
+
 
 body > #content {
-padding: 0px 20px 20px 20px !important;
-}
+  text-align: justify;
+  font-kerning: normal;
+  -webkit-text-size-adjust: 100%;
+  -webkit-font-feature-settings: "kern" 1;
+  -moz-font-feature-settings: "kern" 1;
+  -o-font-feature-settings: "kern" 1;
+  font-feature-settings: "kern" 1;
+  margin-top: 2%;
+  max-width: 900px;
+  border: 1px solid #555555;
+  padding: 10px 40px;
+  padding-bottom: 20px;
+  border-radius: 2px;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Poppins";
+  color: #dcdcdc;
 }
 
-body > #content {
-margin: 0px;
-max-width: 900px;
-border: 1px solid #555555;
-padding: 10px 40px;
-padding-bottom: 20px;
-border-radius: 2px;
-margin-left: auto;
-margin-right: auto;
-}
-
-hr {
-color: #bbb;
-background-color: #bbb;
-height: 1px;
-flex: 0 1 auto;
-margin: 1em 0;
-padding: 0;
-border: none;
-}
 
 /**
 * Links
 */
-a {
+.content a {
 color: #0366d6;
 text-decoration: none; }
-a:visited {
+.content a:visited {
 color: #0366d6; }
-a:hover {
+.content a:hover {
 color: #0366d6;
 text-decoration: underline; }
 
@@ -179,7 +180,7 @@ background-color: #f6f8fa;
 */
 
 img {
-max-width: 100%;
+  max-width: 100%;
 }
 
 p {
@@ -188,212 +189,88 @@ font-weight: 400;
 font-size: 16px;
 color: #dcdcdc; }
 
-ul {
+.content ul {
 margin-top: 0; }
 
-li {
+.content li {
 color: #dcdcdc;
 font-size: 16px;
 font-weight: 400;
 line-height: 1.5; }
 
-li + li {
+.content li + .content li {
 margin-top: 0.25em; }
 
-* {
-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-color: #dcdcdc; }
 
-a:visited {
+
+.content a:visited {
 color: #0366d6; }
 
 h1, h2, h3 {
 border-bottom: 1px solid #555555;
 color: #dcdcdc;
-/* Darker */ }</style><style type="text/css" class="dark-mode-native-dark-cloned" disabled="">body {
-font: 400 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-color: #dcdcdc;
-background-color: #0d1117;
--webkit-text-size-adjust: 100%;
--webkit-font-feature-settings: "kern" 1;
--moz-font-feature-settings: "kern" 1;
--o-font-feature-settings: "kern" 1;
-font-feature-settings: "kern" 1;
-font-kerning: normal;
-padding: 30px;
+/* Darker */ }
+
+
+
+header {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 10px 10%;
+  background-color: #161b22;
+  width: 100%; 
+  box-sizing: border-box; 
+  font-family: "Poppins", sans-serif;
 }
 
-@media only screen and (max-width: 600px) {
-body {
-padding: 5px;
+.logo {
+  margin-right: auto;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body > #content {
-padding: 0px 20px 20px 20px !important;
-}
-}
-
-body > #content {
-margin: 0px;
-max-width: 900px;
-border: 1px solid #555555;
-padding: 10px 40px;
-padding-bottom: 20px;
-border-radius: 2px;
-margin-left: auto;
-margin-right: auto;
+.logo img {
+  padding: 0;
+  box-sizing: border-box;
 }
 
-hr {
-color: #bbb;
-background-color: #bbb;
-height: 1px;
-flex: 0 1 auto;
-margin: 1em 0;
-padding: 0;
-border: none;
+nav {
+  box-sizing: border-box;
+  padding: 0;
 }
 
-/**
-* Links
-*/
-a {
-color: #0366d6;
-text-decoration: none; }
-a:visited {
-color: #0366d6; }
-a:hover {
-color: #0366d6;
-text-decoration: underline; }
-
-pre {
-background-color: #f6f8fa;
-border-radius: 3px;
-font-size: 85%;
-line-height: 1.45;
-overflow: auto;
-padding: 16px;
+.nav__links {
+  box-sizing: border-box;
+  list-style: none;
+  display: flex;
+  padding: 0;
 }
 
-/**
-* Code blocks
-*/
-
-code {
-background-color: rgba(27,31,35,.05);
-border-radius: 3px;
-font-size: 85%;
-margin: 0;
-word-wrap: break-word;
-padding: .2em .4em;
-font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;
+.nav__links a,
+.cta,
+.overlay__content a {
+  font-weight: 500;
+  color: #edf0f1;
+  text-decoration: none;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-pre > code {
-background-color: transparent;
-border: 0;
-display: inline;
-line-height: inherit;
-margin: 0;
-overflow: visible;
-padding: 0;
-word-wrap: normal;
-font-size: 100%;
+.nav__links li {
+  padding: 0px 20px;
+  box-sizing: border-box;
 }
 
-
-/**
-* Blockquotes
-*/
-blockquote {
-margin-left: 30px;
-margin-top: 0px;
-margin-bottom: 16px;
-border-left-width: 3px;
-padding: 0 1em;
-color: #828282;
-border-left: 4px solid #e8e8e8;
-padding-left: 15px;
-font-size: 18px;
-letter-spacing: -1px;
-font-style: italic;
-}
-blockquote * {
-font-style: normal !important;
-letter-spacing: 0;
-color: #6a737d !important;
+.nav__links li a {
+  box-sizing: border-box;
+  padding: 0;
+  transition: all 0.3s ease 0s;
 }
 
-/**
-* Tables
-*/
-table {
-border-spacing: 2px;
-display: block;
-font-size: 14px;
-overflow: auto;
-width: 100%;
-margin-bottom: 16px;
-border-spacing: 0;
-border-collapse: collapse;
+.nav__links li a:hover {
+  color: #0088a9;
 }
-
-td {
-padding: 6px 13px;
-border: 1px solid #dfe2e5;
-}
-
-th {
-font-weight: 600;
-padding: 6px 13px;
-border: 1px solid #dfe2e5;
-}
-
-tr {
-background-color: #fff;
-border-top: 1px solid #c6cbd1;
-}
-
-table tr:nth-child(2n) {
-background-color: #f6f8fa;
-}
-
-/**
-* Others
-*/
-
-img {
-max-width: 100%;
-}
-
-p {
-line-height: 24px;
-font-weight: 400;
-font-size: 16px;
-color: #dcdcdc; }
-
-ul {
-margin-top: 0; }
-
-li {
-color: #dcdcdc;
-font-size: 16px;
-font-weight: 400;
-line-height: 1.5; }
-
-li + li {
-margin-top: 0.25em; }
-
-* {
-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-color: #dcdcdc; }
-
-a:visited {
-color: #0366d6; }
-
-h1, h2, h3 {
-border-bottom: 1px solid #555555;
-color: #dcdcdc;
-/* Darker */ }</style>
+</style>
 
 </body></html>
