Changed profile picture

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <img src= "user.jpg">
                     </div> 
                     <h3>Agustin Paredes</h3>
-                    <p>I'm a Devops engineer bla bla bla.</p>
+                    <p>Analista informático. DevOps. Machine Learning enthusiast</p>
                     <a href="Files/CV Agustin Paredes.pdf" class="btn"> Descarga mi CV</a>
                     <u1 class="socialMedia">
                         <!-- <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li> -->
