--- a/Machine Learning/Caso de estudio Dataset Iris.html
+++ b/Machine Learning/Caso de estudio Dataset Iris.html
@@ -2,17 +2,28 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
         <title>Analisis Iris</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
       </head>
       <body>
         <header>
-          <a class="logo" href="../index.html"><img src="../logo.svg" alt="logo"></a>
+          <div class="logo">AGUSTIN PAREDES</div>
           <nav>
-              <ul class="nav__links">
+              <ul>
+                  <li><a href="../index.html">Home</a></li>
                   <li><a href="../Machine Learning.html">Machine Learning</a></li>
-                  <li><a href="#">Proximamente..</a></li>
+                  <li><a href="#">Proximamente ...</a></li>
               </ul>
           </nav>
+          <div class="menu-toggle" onclick="show()"><i class="fa fa-bars" aria-hidden="true"></i></div>
       </header>
+      <script>
+        
+          function show(){
+              let toggle = document.querySelector('.menu-toggle');
+              let navigation= document.querySelector('nav');
+              navigation.classList.toggle('active');
+          }
+      </script>
         <div id="content">
     <h1 id="caso-de-estudio-dataset-iris">Caso de estudio: Dataset Iris</h1>
 <p><img src="Caso%20de%20estudio%20Dataset%20Iris_files/iris-machinelearning.png"></p>
@@ -111,7 +122,7 @@ futuro predecir un tipo de flor dados los datos sin clasificar.</p>
     background-color: #0d1117;
     display: flex;
     flex-direction: column;
-    margin: 0;
+    margin-top: 50;
     justify-content: center;
     align-items: center;
     font-family: "Poppins", sans-serif;
@@ -152,12 +163,12 @@ futuro predecir un tipo de flor dados los datos sin clasificar.</p>
   /**
     * Links
     */
-  .content a {
+  #content a {
     color: #0366d6;
     text-decoration: none; }
-    .content a:visited {
+    #content a:visited {
       color: #0366d6; }
-    .content a:hover {
+    #content a:hover {
       color: #0366d6;
       text-decoration: underline; }
   pre {
@@ -193,6 +204,7 @@ futuro predecir un tipo de flor dados los datos sin clasificar.</p>
     padding: 0;
     word-wrap: normal;
     font-size: 100%;
+    white-space: pre-wrap;
   }
   
   
@@ -290,64 +302,109 @@ futuro predecir un tipo de flor dados los datos sin clasificar.</p>
     color: #dcdcdc;
     /* Darker */ }
   
-    header {
+header
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 0 100px;
+    background: #161b22;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+header .logo
+{
+    color: #fff;
+    height: 50px;
+    line-height: 50px;
+    font-size: 24px;
+    float: left;
+    font-weight: bold;
+}
+
+header nav 
+{
+    float: right;
+
+}
+
+header nav ul
+{
+    margin: 0;
+    padding: 0;
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    padding: 10px 10%;
-    background-color: #161b22;
-    width: 100%; 
-    box-sizing: border-box; 
-    font-family: "Poppins", sans-serif;
-  }
-  
-  .logo {
-    margin-right: auto;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  .logo img {
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  nav {
-    box-sizing: border-box;
-    padding: 0;
-  }
-  
-  .nav__links {
-    box-sizing: border-box;
+}
+
+header nav ul li
+{
     list-style: none;
-    display: flex;
-    padding: 0;
-  }
-  
-  .nav__links a,
-  .cta,
-  .overlay__content a {
-    font-weight: 500;
-    color: #edf0f1;
+}
+
+header nav ul li a
+{
+    height: 50px;
+    line-height: 50px;
+    padding: 0 20px;
+    color: #fff;
     text-decoration: none;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  .nav__links li {
-    padding: 0px 20px;
-    box-sizing: border-box;
-  }
-  
-  .nav__links li a {
-    box-sizing: border-box;
-    padding: 0;
-    transition: all 0.3s ease 0s;
-  }
-  
-  .nav__links li a:hover {
-    color: #0088a9;
-  }
+    display: block;
+}
+
+header nav ul li a:hover
+{
+    color: #fff;
+    background-color: #2196f3;
+}
+
+.menu-toggle
+{
+    color: #fff;
+    float: right;
+    line-height: 50px;
+    font-size: 24px;
+    cursor: pointer;
+    display: none;
+}
+
+@media (max-width: 991px)
+{
+    header
+    {
+        padding: 0 20px;
+        z-index: 1;
+    }
+    .menu-toggle
+    {
+        display: block;
+        margin-top: 13;
+    }
+    header nav
+    {
+        position: absolute;
+        width: 100%;
+        height: calc(100vh - 50px);
+        background: #333;
+        top: 50px;
+        left: -100%;
+        transition: 0.5s;
+    }
+    header nav.active
+    {
+        left: 0;
+    }
+    header nav ul
+    {
+        display: block;
+        text-align: center;
+    }
+
+    header nav ul li a 
+    {
+        border-bottom: 1px solid rgba(0,0,0,.2);
+    }
+    
+}
   </style>
   <style type="text/css">/*
   
