--- a/Machine Learning/Introduccion a machine learning.html
+++ b/Machine Learning/Introduccion a machine learning.html
@@ -3,17 +3,27 @@
       <head>
         <title>Introducción al aprendizaje automático</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
       </head>
       <body>
         <header>
-          <a class="logo" href="../index.html"><img src="../logo.svg" alt="logo"></a>
+          <div class="logo">AGUSTIN PAREDES</div>
           <nav>
-              <ul class="nav__links">
+              <ul>
+                  <li><a href="../index.html">Home</a></li>
                   <li><a href="../Machine Learning.html">Machine Learning</a></li>
-                  <li><a href="#">Proximamente..</a></li>
+                  <li><a href="#">Proximamente ...</a></li>
               </ul>
           </nav>
-      </header> 
+          <div class="menu-toggle" onclick="show()"><i class="fa fa-bars" aria-hidden="true"></i></div>
+      </header>
+      <script>
+          function show(){
+              let toggle = document.querySelector('.menu-toggle');
+              let navigation= document.querySelector('nav');
+              navigation.classList.toggle('active');
+          }
+      </script>
         <div id='content'>
     <h1 id="machine-learning">Introducción al aprendizaje automático</h1>
 <p><img src="Introduccion a machine learning_files/ml1.jpg"></p>
@@ -42,7 +52,7 @@ body {
   background-color: #0d1117;
   display: flex;
   flex-direction: column;
-  margin: 0;
+  margin-top: 50;
   justify-content: center;
   align-items: center;
   font-family: "Poppins", sans-serif;
@@ -221,63 +231,110 @@ h1, h2, h3 {
   color: #dcdcdc;
   /* Darker */ }
 
-  header {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  padding: 10px 10%;
-  background-color: #161b22;
-  width: 100%; 
-  box-sizing: border-box; 
-  font-family: "Poppins", sans-serif;
+
+
+header
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 0 100px;
+    background: #161b22;
+    width: 100%;
+    box-sizing: border-box;
 }
 
-.logo {
-  margin-right: auto;
-  padding: 0;
-  box-sizing: border-box;
+header .logo
+{
+    color: #fff;
+    height: 50px;
+    line-height: 50px;
+    font-size: 24px;
+    float: left;
+    font-weight: bold;
 }
 
-.logo img {
-  padding: 0;
-  box-sizing: border-box;
+header nav 
+{
+    float: right;
+
 }
 
-nav {
-  box-sizing: border-box;
-  padding: 0;
+header nav ul
+{
+    margin: 0;
+    padding: 0;
+    display: flex;
 }
 
-.nav__links {
-  box-sizing: border-box;
-  list-style: none;
-  display: flex;
-  padding: 0;
+header nav ul li
+{
+    list-style: none;
 }
 
-.nav__links a,
-.cta,
-.overlay__content a {
-  font-weight: 500;
-  color: #edf0f1;
-  text-decoration: none;
-  padding: 0;
-  box-sizing: border-box;
+header nav ul li a
+{
+    height: 50px;
+    line-height: 50px;
+    padding: 0 20px;
+    color: #fff;
+    text-decoration: none;
+    display: block;
 }
 
-.nav__links li {
-  padding: 0px 20px;
-  box-sizing: border-box;
+header nav ul li a:hover
+{
+    color: #fff;
+    background-color: #2196f3;
 }
 
-.nav__links li a {
-  box-sizing: border-box;
-  padding: 0;
-  transition: all 0.3s ease 0s;
+.menu-toggle
+{
+    color: #fff;
+    float: right;
+    line-height: 50px;
+    font-size: 24px;
+    cursor: pointer;
+    display: none;
 }
 
-.nav__links li a:hover {
-  color: #0088a9;
+@media (max-width: 991px)
+{
+    header
+    {
+        padding: 0 20px;
+        z-index: 1;
+    }
+    .menu-toggle
+    {
+        display: block;
+        margin-top: 13;
+    }
+    header nav
+    {
+        position: absolute;
+        width: 100%;
+        height: calc(100vh - 50px);
+        background: #333;
+        top: 50px;
+        left: -100%;
+        transition: 0.5s;
+    }
+    header nav.active
+    {
+        left: 0;
+    }
+    header nav ul
+    {
+        display: block;
+        text-align: center;
+    }
+
+    header nav ul li a 
+    {
+        border-bottom: 1px solid rgba(0,0,0,.2);
+    }
+    
 }
 </style>
 <style type="text/css">/*
