--- a/index.html
+++ b/index.html
@@ -11,14 +11,23 @@
 
     <body>    
         <header>
-            <a class="logo" href="/"><img src="logo.svg" alt="logo"></a>
+            <div class="logo">AGUSTIN PAREDES</div>
             <nav>
-                <ul class="nav__links">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="Machine Learning.html">Machine Learning</a></li>
-                    <li><a href="#">Proximamente..</a></li>
+                    <li><a href="#">Proximamente ...</a></li>
                 </ul>
             </nav>
-        </header>            
+            <div class="menu-toggle" onclick="show()"><i class="fa fa-bars" aria-hidden="true"></i></div>
+        </header>
+        <script>
+            function show(){
+                let toggle = document.querySelector('.menu-toggle');
+                let navigation= document.querySelector('nav');
+                navigation.classList.toggle('active');
+            }
+        </script>          
         <div class="container">
             <section class="banner" id="banner">
                 <div class="content">
