--- a/Machine Learning/Algoritmos Lineales Regresion lineal.html
+++ b/Machine Learning/Algoritmos Lineales Regresion lineal.html
@@ -405,6 +405,10 @@ header nav ul li a:hover
     {
         border-bottom: 1px solid rgba(0,0,0,.2);
     }
+
+    pre > code {      
+      font-size: 85%;
+    }
     
 }
 </style>
