Added tags and dates

--- a/Machine Learning.html
+++ b/Machine Learning.html
@@ -34,9 +34,9 @@
                     <div>
                       <h1>Introducción a Machine Learning</h1>
                       <p>Todos hemos escuchado los conceptos de “Machine Learning”, “Inteligencia Artificial” y ...</p>
-                      <div class="date">6 Oct 2017</div>
+                      <div class="date">16 Ago 2021</div>
                       <div class="tags">
-                        <div class="tag">HTML</div>
+                        <div class="tag">Conceptos</div>
                       </div>
                     </div>
                   </a>
@@ -47,9 +47,9 @@
                     <div>
                       <h1>Herramientas para trabajar con datos</h1>
                       <p>¿Qué se busca a la hora de elegir una herramienta para en análisis de...</p>
-                      <div class="date">9 Oct 2017</div>
+                      <div class="date">22 Ago 2021</div>
                       <div class="tags">
-                        <div class="tag">HTML</div>
+                        <div class="tag">Conceptos</div>
                       </div>
                     </div>
                   </a>
@@ -60,9 +60,10 @@
                     <div>
                       <h1>Caso de estudio: Dataset Iris</h1>
                       <p>En este caso de estudio, vamos a ver el uso del lenguaje Python con...</p>
-                      <div class="date">14 Oct 2017</div>
+                      <div class="date">29 Ago 2021</div>
                       <div class="tags">
-                        <div class="tag">HTML</div>
+                        <div class="tag">Data Analysis</div>
+                        <div class="tag">Python</div>
                       </div>
                     </div>
                   </a>
@@ -73,9 +74,9 @@
                     <div>
                       <h1>Preparación de datos previo a estudio</h1>
                       <p>Hasta ahora, hemos visto como el análisis de los…</p>
-                      <div class="date">14 Oct 2017</div>
+                      <div class="date">05 Sep 2021</div>
                       <div class="tags">
-                        <div class="tag">HTML</div>
+                        <div class="tag">Conceptos</div>
                       </div>
                     </div>
                   </a>
@@ -86,9 +87,10 @@
                     <div>
                       <h1>Caso de estudio: Dataset Titanic</h1>
                       <p>En este caso de estudio, vamos a ver el uso del lenguaje Python...</p>
-                      <div class="date">14 Oct 2017</div>
+                      <div class="date">11 Sep 2021</div>
                       <div class="tags">
-                        <div class="tag">HTML</div>
+                        <div class="tag">Data Analysis</div>
+                        <div class="tag">Python</div>
                       </div>
                     </div>
                   </a>
@@ -99,9 +101,9 @@
                     <div>
                       <h1>Algoritmos lineales: Regresión lineal</h1>
                       <p>En Machine learning, existen distintos tipos de algoritmos...</p>
-                      <div class="date">14 Oct 2017</div>
+                      <div class="date">01 Oct 2021</div>
                       <div class="tags">
-                        <div class="tag">HTML</div>
+                        <div class="tag">Machine Learning</div>
                       </div>
                     </div>
                   </a>
@@ -112,9 +114,10 @@
                     <div>
                       <h1>Caso de estudio: Dataset Life Expectancy</h1>
                       <p>Durante toda la existencia de la humanidad, las personas se han obsesionado con un único objetivo...</p>
-                      <div class="date">14 Oct 2017</div>
+                      <div class="date">22 Oct 2021</div>
                       <div class="tags">
-                        <div class="tag">HTML</div>
+                        <div class="tag">Machine Learning</div>
+                        <div class="tag">Data Analysis</div>
                       </div>
                     </div>
                   </a>
