--- a/Machine Learning.html
+++ b/Machine Learning.html
@@ -3,6 +3,7 @@
     <head>
         <title>Machine Learning</title>
         <meta charset="utf8" />  
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />   
         <link href="MLstyle.css" type="text/css" rel="stylesheet"  />
     </head>
@@ -118,6 +119,20 @@
                       <div class="tags">
                         <div class="tag">Machine Learning</div>
                         <div class="tag">Data Analysis</div>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="card-grid-space">
+                  <div class="num"></div>
+                  <a class="card" href="Machine Learning/ClusteringMall.html" style="--bg-img: url('Machine Learning/Images/clustering.png')">
+                    <div>
+                      <h1>Clustering - Dataset Mall Customer Segmentation Data</h1>
+                      <p>En Machine Learning, existen dos tipos de aprendizaje, el supervisado y el no supervisado...</p>
+                      <div class="date">01 Nov 2021</div>
+                      <div class="tags">
+                        <div class="tag">Machine Learning</div>
+                        <div class="tag">Clustering</div>
                       </div>
                     </div>
                   </a>
