Added nonlinear algorithms article

--- a/Machine Learning.html
+++ b/Machine Learning.html
@@ -111,6 +111,19 @@
                 </div>
                 <div class="card-grid-space">
                   <div class="num"></div>
+                  <a class="card" href="Machine Learning/Algoritmos no Lineales.html" style="--bg-img: url('Machine Learning/Images/nonlinalg.png')">
+                    <div>
+                      <h1>Algoritmos no lineales</h1>
+                      <p>La diferencia fundamental entre los algoritmos lineales y los...</p>
+                      <div class="date">11 Oct 2021</div>
+                      <div class="tags">
+                        <div class="tag">Machine Learning</div>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="card-grid-space">
+                  <div class="num"></div>
                   <a class="card" href="Machine Learning/CasoDeEstudioLifeExpectancy.html" style="--bg-img: url('Machine Learning/CasoDeEstudioLifeExpectancy_files/lifeexp1.jpg')">
                     <div>
                       <h1>Caso de estudio: Dataset Life Expectancy</h1>
